wrote out model

--- a/river_domain.ipynb
+++ b/river_domain.ipynb
@@ -470,6 +470,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# any shapely helper functions??? inside shape? distance?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression models that describe spatio-temporal dependence are generally formulated as:\n",
+    "\n",
+    "$\\bf y = \\bf X \\boldsymbol \\beta + \\bf v + \\boldsymbol \\epsilon$\n",
+    "\n",
+    "where $\\bf y$ is a stacked response vector of size $n \\times 1$, with $n = S \\times T$ (for $S$ spatial locations and $T$ timepoints), $\\bf X$ is a $n \\times p$ design matrix of $p$ covariates, $\\boldsymbol \\beta$ is a $p \\times 1$ vector or regression coefficients, and $\\bf v$ is a vector of spatio-temporal autocorrelated random effects.\n",
+    "\n",
+    "\n",
+    "\\\n",
+    "Two main approaches are generally found to model spatio-temporal autocorrelation: \n",
+    "\n",
+    "(1) full covariance or descriptive models in which the space-time covariance function is constructed (i.e. Separable space-time VAR(1) model), and \\\n",
+    "(2) dynamical model that involves the evolution of a spatial process (i.e. Vector autoregression spatial model)\n",
+    "\n",
+    "In the second approach we just need to construct the spatial covariance matrix. Temporal dependence is incorporated in the error terms using a vector autoregression VAR(1). Edgar's paper showed that both approaches are equivalent, and the second approach is more computationally efficient.\n",
+    "\n",
+    "\n",
+    "#### Bayesian hierarchical model\n",
+    "\n",
+    "$ p(\\bf y_t | \\bf y_{t-1}, \\boldsymbol \\theta, \\bf X_t, \\bf X_{t-1}, \\boldsymbol \\Phi_1, \\Sigma) = \\mathcal{N}(\\boldsymbol \\mu_t, \\Sigma + \\sigma_0^2 \\bf I)$\n",
+    "\n",
+    "$\\boldsymbol \\mu_t = \\bf X_t \\boldsymbol \\beta + \\boldsymbol \\Phi_1(\\bf y_{t-1} - \\bf X_{t-1} \\boldsymbol \\beta)$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$\\boldsymbol \\Sigma = Cov(v_i)\\ \\forall i = 1,...,T$ is the $S \\times S$ spatial covariance matrix, e.g., formulated by the exponential function with matrix entries of the form\n",
+    "\n",
+    "$\\boldsymbol \\Sigma_{ij} := C(h_{ij} | \\boldsymbol \\theta) = \\sigma_1^2 \\exp(-h_{ij}/\\alpha), \\ \\alpha > 0,\\ h_{ij}$ is the stream distance between locations $s_i$ and $s_j$. Denote spatial covariance parameters by $\\boldsymbol \\theta = (\\sigma_0^2,\\sigma_1^2,\\alpha)$.\n",
+    "\n",
+    "\n",
+    "$\\boldsymbol \\Phi_1$ is the $S \\times S$ transition matrix determining the amount of temporal autocorrelation, e.g., in the simplest case, assuming the same temporal autocorrelation for all spatial locations, the diagonal elements of $\\boldsymbol \\Phi$ are all equal to $\\phi$ and all the off-diagonal ones are set to zero,\n",
+    "\n",
+    "\n",
+    "$\\boldsymbol \\Phi_1 = \n",
+    "\\begin{bmatrix}\n",
+    "\\phi & 0 & 0 & \\cdots & 0 \\\\\n",
+    "0 & \\phi & 0 & \\cdots & 0 \\\\\n",
+    "0 & 0 & \\phi & \\cdots & 0 \\\\\n",
+    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "0 & 0 & 0 & \\cdots & \\phi \\\\\n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "\n",
+    "\n",
+    "##### Hyper priors\n",
+    "\n",
+    "$\\beta_1,...,\\beta_p \\sim \\mathcal(0,10)$   # prior on the regression coefficients\n",
+    "\n",
+    "$\\sigma_0 \\sim \\text{Uniform}(0, 1) $ # prior on the nugget effect\n",
+    "\n",
+    "$\\sigma_1 \\sim \\text{Uniform}(0, 10) $ # prior partial sill parameters\n",
+    "\n",
+    "$\\alpha \\sim \\text{Uniform}(0, 16) $ # prior on spatial range parameters\n",
+    "\n",
+    "$\\phi \\sim \\text{Uniform}(-1,1) $ # prior on the autoregressive parameters, elements of $\\boldsymbol \\Phi_1$\n",
+    "\n",
+    "See: https://www.fs.usda.gov/rm/pubs_journals/2022/rmrs_2022_santos_fernandes_e001.pdf\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -486,6 +566,27 @@
     "# TODO: create generator onject on domain;\n",
     "# - add points, calculate distance"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
