WIP: stream distance calculation

--- a/river_domain.ipynb
+++ b/river_domain.ipynb
@@ -492,6 +492,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement in pyro\n",
+    "# alpha and sigma_0, sigma_1 are constant (remove Xbeta, temporal) -> only v random (learn the function)\n",
+    "\n",
+    "\n",
+    "# 1. first get design\n",
+    "# 2. compute h_ij matrix given design\n",
+    "# 3. calculate covariance matrix for v, deterministic on h_ij\n",
+    "# 4. sample v, using same pyro syntax as latent variable\n",
+    "# 5. sample y given v with independent random noise (small, fixed) [mu=v, cov=Isigma]\n",
+    "\n",
+    "# strip out all location finding latent variables, put in stream distance\n",
+    "\n",
+    "# learning the design\n",
+    "# gradient (nudge back within polygon), baseline: batch bald - discretization of design space add points one at a time, approximation to optimal design (read paper)\n",
+    "\n",
+    "# diagnostics, convergence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 18:41:39 From  Desi R. Ivanova  to  Everyone:\n",
+    "# \tBatchBALD\n",
+    "# 18:41:50 From  Adam  to  Everyone:\n",
+    "# \thttps://arxiv.org/abs/1906.08158\n",
+    "# 18:48:50 From  Adam  to  Everyone:\n",
+    "# \thttps://mlflow.org/docs/latest/index.html"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -666,7 +704,10 @@
     "\n",
     "# calculate stream distance\n",
     "h_ij = scipy.spatial.distance_matrix([(0, y) for y in ys], [(0, y) for y in ys])\n",
-    "h_ij"
+    "h_ij\n",
+    "\n",
+    "# fix h_ij so that goes around finger\n",
+    "# small kernel term that involves x coordinate -> effect of being a gradient term that encouages"
    ]
   },
   {
@@ -724,6 +765,237 @@
     "geo_coords = [xy_along_segment(s_i, df) for s_i in s_t]\n",
     "geo_coords"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xy_segment_info(s_i, df):\n",
+    "    # get corresponding segment of s_i from df\n",
+    "    idx_df = [i for i in range(len(df)) if s_i.within(Polygon(df[\"box_coord\"].iloc[i]))]\n",
+    "    row = df.iloc[idx_df].squeeze()\n",
+    "\n",
+    "    # Calculate the fraction of the total distance\n",
+    "    dist_along_segment = row[\"upDist\"] - s_i.y\n",
+    "\n",
+    "    return {\n",
+    "        \"pid_from\": row[\"pid_from\"],\n",
+    "        \"pid_to\": row[\"pid_to\"],\n",
+    "        \"dist_along_segment\": dist_along_segment,\n",
+    "        \"length\": row[\"Length\"],\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'pid_from': 4,\n",
+       "  'pid_to': 2,\n",
+       "  'dist_along_segment': 0.49635960418034575,\n",
+       "  'length': 0.980140695953742},\n",
+       " {'pid_from': 2,\n",
+       "  'pid_to': 1,\n",
+       "  'dist_along_segment': 0.989954848426518,\n",
+       "  'length': 1.0},\n",
+       " {'pid_from': 3,\n",
+       "  'pid_to': 4,\n",
+       "  'dist_along_segment': 0.2966548873453343,\n",
+       "  'length': 1.052507581049577}]"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "si_info = [xy_segment_info(s_i, df) for s_i in s_t]\n",
+    "si_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 1.47373594, 1.2522123 ],\n",
+       "       [1.47373594, 0.        , 2.72594824],\n",
+       "       [1.2522123 , 2.72594824, 0.        ]])"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h_ij"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.graph.Graph at 0x1a9ca36f5e0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "\n",
+    "\n",
+    "# encode as networkx object and plot\n",
+    "G = nx.Graph()\n",
+    "G.add_weighted_edges_from(\n",
+    "    list(zip(shapefile.pid_from, shapefile.pid_to, shapefile.Length))\n",
+    ")\n",
+    "nx.shortest_path_length(G, source=0, weight=\"weight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 3: 0.915953405248001,\n",
+       " 4: 1.968460986297578,\n",
+       " 2: 2.94860168225132,\n",
+       " 1: 3.94860168225132}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# encode as networkx object and plot\n",
+    "DiG = nx.DiGraph()\n",
+    "DiG.add_weighted_edges_from(\n",
+    "    list(zip(shapefile.pid_from, shapefile.pid_to, shapefile.Length))\n",
+    ")\n",
+    "nx.shortest_path_length(DiG, source=0, weight=\"weight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_flow_connected_directed(pid_from_1, pid_from_2):\n",
+    "    try:\n",
+    "        nx.shortest_path_length(\n",
+    "            DiG, source=pid_from_1, target=pid_from_2, weight=\"weight\"\n",
+    "        )\n",
+    "        return True\n",
+    "    except nx.NetworkXNoPath:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "def is_flow_connected(pid_from_1, pid_from_2):\n",
+    "    return any(\n",
+    "        [\n",
+    "            is_flow_connected_directed(pid_from_1, pid_from_2),\n",
+    "            is_flow_connected_directed(pid_from_2, pid_from_1),\n",
+    "        ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2522122978845884"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "point_1_idx = 2\n",
+    "point_2_idx = 0\n",
+    "\n",
+    "# first s_i point, get pid_to (most downstream)\n",
+    "pid_from_1 = si_info[point_1_idx][\"pid_from\"]\n",
+    "pid_to_1 = si_info[point_1_idx][\"pid_to\"]\n",
+    "\n",
+    "# second_i point, get pid_from (most upstream)\n",
+    "pid_from_2 = si_info[point_2_idx][\"pid_from\"]\n",
+    "\n",
+    "if is_flow_connected(pid_from_1, pid_from_2):  ### FIXME get most upstream point\n",
+    "    # get in_between_dist\n",
+    "    in_between_dict = nx.shortest_path_length(DiG, source=pid_to_1, weight=\"weight\")\n",
+    "\n",
+    "    # if not flow connected, return zero\n",
+    "    if pid_from_2 not in in_between_dict.keys():\n",
+    "        pass\n",
+    "\n",
+    "    in_between_dist = in_between_dict[pid_from_2]\n",
+    "\n",
+    "    # first s_i point, calculate distance from pid_to (most downstream) to the point\n",
+    "    dist_bottom_to_pt_1 = (\n",
+    "        si_info[point_1_idx][\"length\"] - si_info[point_1_idx][\"dist_along_segment\"]\n",
+    "    )\n",
+    "\n",
+    "    # second s_i point, calculate distance from pid_from (most upstrem) to the point\n",
+    "    dist_top_to_pt_2 = si_info[point_2_idx][\"dist_along_segment\"]\n",
+    "\n",
+    "    stream_dist = in_between_dist + dist_bottom_to_pt_1 + dist_top_to_pt_2\n",
+    "\n",
+    "    # make symmetric dist\n",
+    "\n",
+    "#### OTHERWISE, use non directed graph and take away different distances\n",
+    "\n",
+    "\n",
+    "stream_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1066,7 +1338,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how to implement this in codebase\n",
+    "\n",
+    "# just Gaussian process based on stream distance (spatial)\n",
+    "\n",
+    "# we have generative model, need likelihood (pyro? -> have a way to test it. In pure python, write down likelihood. Compare same data)\n",
+    "\n",
+    "\n",
+    "# pyro -> once the generator is written, pyro gives likelihood for free\n",
+    "\n",
+    "# likelihood is the factorised Gaussian, uncorrelated errors"
+   ]
   },
   {
    "cell_type": "code",
@@ -1094,7 +1377,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# stochastic volatility, environmental variables exhibit this. high-variability/low-variability -> maybe a generalisation\n",
+    "# first and second order differencing (michael stein, slides) -> references"
+   ]
   },
   {
    "attachments": {},
